--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
     "core-js": "^2.4.1",
+    "ng2-search-filter": "^0.4.7",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
